test/spec_vectors/memory_copy/ok/module_88.wat
(module (memory 1 1) (func (export "test") (memory.copy (i32.const 16384) (i32.const 4294967040) (i32.const 257))))